Add advisory board

--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
       </div>
       <div class="container">
 
-        <div class="row">
+        <div class="row justify-content-center">
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
@@ -195,6 +195,61 @@
               </div>
             </div>
           </div>
+      </div>
+      <div class="section-title padding-top-4" data-aos="fade-up">
+        <h2>Advisory Board</h2>
+      </div>
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/philipwharton.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Phillip Wharton | <a href="https://www.philipwharton.com/" target="_blank"><i class='bx bx-link'></i></a></h4>
+                <span>Composer, Violinist, and Teacher</span>
+                <p id="philipwharton-bio" class="text-overflow-clamp">
+                  Few artists enjoy such high praise for both of their disciplines as composer/violinist Philip Wharton. Of his playing, <i>The New York Times</i> proclaimed, “a rousing performance!” and <i>The Waterloo Courier</i> wrote, “a golden tone with breathtaking execution.” His compositions, heralded from coast to coast, are described by the <i>New York Concert Review</i> as, “…decidedly contemporary…both engaging and accessible.” Writing from symphony to song, past seasons saw the Santa Fe Opera’s remounting of <i>Two Saintes Caught in the Same Act</i> as part of their apprentice scenes program, the Grammy-nominated Borealis Wind Quintet perform his Quintet on their concert tours, his chamber symphony, <i>Passing Season</i> performed by regional orchestras, premiere of his Symphony, his tribute to Shakespeare’s 450th birthday, a song cycle entitled Fools, and concerts with Grammy-nominated soprano, Caroline Worra. Other projects include collaborations with author Janet Burroway and illustrator John Vernon Lord to create musical settings of their books for children: <i>The Giant Jam Sandwich, The Truck on the Track</i>, and a vocal-monodrama, <i>The Perfect Pig</i>. Recent recordings include Albany Records’ release of his Flute Sonata—performed by flutist, Katherine Fink, and pianist Rose Grace, Crescent Phase Records’ release of his Woodwind Quintet—performed by the Madera Woodwind Quintet, and Kenneth Thompkins’ (principal Detroit Symphony Orchestra) recording of his Alto-Trombone Sonata. Expect to see the release of a CD by Elizabeth Sombart with the Royal Philharmonic Orchestra in the coming year.
+                </p>
+                <p><a id="philipwharton-bio-btn" class="bio-btn">Read More</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/gregtardy.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Greg Tardy | <a href="https://www.gregorytardy.com/" target="_blank"><i class='bx bx-link'></i></a> <a href="https://www.facebook.com/gregory.tardy.3" target="_blank"><i class='bx bxl-facebook'></i></a> <a href="https://www.instagram.com/gregoryjtardy/" target="_blank"><i class='bx bxl-instagram' ></i></a></h4>
+                <span>Composer, Jazz Reedman, and Associate Professor of Jazz Saxophone at UTK</span>
+                <p id="gregtardy-bio" class="text-overflow-clamp">
+                  Saxophonist, multi-reedist, and composer Gregory Tardy is one of the most versatile jazz musicians of his generation, equally comfortable in a variety of musical and improvisational situations.  Born into a musical family, he began his musical career studying classical clarinet. In his early 20s, while preparing for a symphony career he discovered jazz saxophone and hasn’t looked back.<br><br>In 1992, he started playing with the legendary drummer, Elvin Jones, and he recorded his first CD, <i>Crazy Love</i>. As a sought after sideman he has played with many prominent jazz artists including: Andrew Hill, Tom Harrell, Dave Douglas, Wynton Marsalis, Jay McShann, Nicholas Payton, Roy Hargrove, Steve Coleman, Betty Carter, Don Byron, Bill Frisell, Rashied Ali, Ellis Marsalis, Brian Lynch, John Patitucci, and many more. He has also performed and/or recorded along with many other notable saxophonists, such as Joe Lovano, Mark Turner, Chris Potter, Dewey Redman, Ravi Coltrane, and others. In more recent years, Tardy has gone full circle, by focusing on his clarinets more, using them on recordings by Tom Harrell, Ohad Talmor/Steve Swallow, Stefan Harris, Chris Potter and Andrew Hill.<br><br>His performance schedule has taken him all over the world, playing at all of the major jazz festivals and on some of the biggest stages in jazz.  As a sideman, he has been featured on several Downbeat Albums of the Year and also several Grammy nominated recordings; including a Grammy winning CD with Brian Lynch in 2006.  He also has recorded fourteen CDs under his own name featuring his unique compositions, blending his love of traditional jazz with a more modern seeking style. His latest project, <i>If Time Could Stand Still</i>, was released in the fall of 2020 on WJ3 Records.
+                </p>
+                <p><a id="gregtardy-bio-btn" class="bio-btn">Read More</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/nickkircher.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Nick Kircher</h4>
+                <span>Ethnomusicologist and Registered Piano Technician</span>
+                <p id="nickkircher-bio" class="text-overflow-clamp">
+                  Nick Kircher received his Bachelor’s of Music Education from Northwestern University in Evanston, Illinois and his Master’s degree in Ethnomusicology from Liberty University. Nick founded Kircher’s Piano Service in 1980 and has been tuning and repairing pianos, as well as teaching piano technology in the decades since then. Nick has worked with musicians around the world to help them develop songs of adoration using their heart language and heart music. He is currently on staff with United Adoration, a ministry devoted to revitalizing the creativity of the church.
+                </p>
+                <p><a id="nickkircher-bio-btn" class="bio-btn">Read More</a></p>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
@@ -202,32 +257,66 @@
                 <img src="assets/img/team/alison.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Alison Maerker Garner</h4>
-                <span>Board Member</span>
+                <h4>Alison Maerker Garner | <a href="https://garnerstudio2.com/" target="_blank"><i class='bx bx-link'></i></a></h4>
+                <span>Transformational Coach, Music Educator and Violinist</span>
                 <p id="alison-bio" class="text-overflow-clamp">
-                  Ms. Garner is a transformational coach for creatives, a professional violinist and pianist and 
-creator of the Musical Minds curriculum for children. Her training includes degrees in Violin 
-Performance at Indiana University where she studied with Josef Gingold, Music Education, 
-Inter-related Arts and Aesthetics Education, and Child Development. Ms. Garner has an 
-extensive background in dance and dance composition, studio art, and has published fourteen 
-Musical Minds books and ten peer-reviewed articles on promoting the psycho-emotional health 
-in both music teachers and musicians. As a performer, Ms. Garner soloed as a child on both 
-violin and piano playing in Carnegie Hall, Kennedy Center and throughout North and South 
-America. She later performed professionally in many orchestras and chamber ensembles, and 
-held solo recitals. As an educator, Ms. Garner teaches children and coaches teachers using the 
-Suzuki Method, Orff, Kodaly, Dalcroze-Eurhythmics and particularly, her Musical Minds 
-approach. As a transformational coach, Ms. Garner integrates somatic therapies with mind-body 
-practices, Interpersonal Neurobiology and Neuro-Linguistic Programming to serve those she 
-counsels. Her life-path involves nurturing and guiding teachers, healers, students, musicians, 
-dancers, artists, and those in the language arts into the mind-body integration necessary to reach 
-the full embodiment of their greatest potential.
+                  Ms. Garner is a transformational coach for creatives, a professional violinist and pianist and creator of the Musical Minds curriculum for children. Her training includes degrees in Violin Performance at Indiana University where she studied with Josef Gingold, Music Education, Inter-related Arts and Aesthetics Education, and Child Development. Ms. Garner has an extensive background in dance and dance composition, studio art, and has published fourteen Musical Minds books and ten peer-reviewed articles on promoting the psycho-emotional health in both music teachers and musicians. As a performer, Ms. Garner soloed as a child on both violin and piano playing in Carnegie Hall, Kennedy Center and throughout North and South America. She later performed professionally in many orchestras and chamber ensembles, and held solo recitals. As an educator, Ms. Garner teaches children and coaches teachers using the Suzuki Method, Orff, Kodaly, Dalcroze-Eurhythmics and particularly, her Musical Minds approach. As a transformational coach, Ms. Garner integrates somatic therapies with mind-body practices, Interpersonal Neurobiology and Neuro-Linguistic Programming to serve those she counsels. Her life-path involves nurturing and guiding teachers, healers, students, musicians, dancers, artists, and those in the language arts into the mind-body integration necessary to reach the full embodiment of their greatest potential.
                 </p>
                 <p><a id="alison-bio-btn" class="bio-btn">Read More</a></p>
               </div>
             </div>
           </div>
         </div>
+        <div class="row">
 
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/tinahoffmann.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Tina Hoffmann | <a href="https://www.tinamhoffmann.net/en" target="_blank"><i class='bx bx-link'></i></a> <a href="https://www.instagram.com/trauma.transformation.cultures/" target="_blank"><i class='bx bxl-instagram' ></i></a></h4>
+                <span>Psychosocial Counsellor and NARM® Practitioner</span>
+                <p id="tinahoffmann-bio" class="text-overflow-clamp">
+                  I love working with people, I would even say 'I love people' and the Cultures they come from. Helping Individuals with their Trauma Transformation, and thereby bringing Trauma Transformation into their Cultures, is my great passion, which began in China in 1996.<br><br>Since 1996 I have been working with children and adults with trauma, as a Counsellor and Psychological Development Worker.<br><br>I completed my Master's degree in Psychosocial Counselling in Austria, am a Licensed Psychological Counsellor, Trauma Counsellor & Trauma Pedagogue, and Certified NARM practitioner (healing Developmental Trauma).<br><br>I have southern German and Austrian roots, was born in 1969 and have lived half of my life in Asia, where I am Co-founder of two Counselling Centers in China and Thailand. Internationally I teach 'Trauma Care' and 'Psychological Counselling' in, through and with cultures'.<br><br>Currently based in Vienna, I can draw on many years of experience working with individuals and teams from many different cultures. Having raised three children in a foreign country and going through trauma and crisis challenges, have given me deep and comprehensive insights into the human life experience and its possibilities.
+                </p>
+                <p><a id="tinahoffmann-bio-btn" class="bio-btn">Read More</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/carlahanson.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Carla Hanson | <a href="http://www.carlahanson.com/" target="_blank"><i class='bx bx-link'></i></a> <a href="https://www.facebook.com/pages/Carla-Thelen-Hanson-Soprano/193393743448" target="_blank"><i class='bx bxl-facebook'></i></a></h4>
+                <span>Soprano and Instructor in Music Voice at Luther College</span>
+                <p id="carlahanson-bio" class="text-overflow-clamp">
+                  Carla Thelen Hanson is garnering attention for exciting and vocally thrilling performances of opera's leading heroines throughout the country of her recent debut of Cio-Cio San in Puccini's Madama Butterfly the InForum declared: "the singer's star is shining bright...". Her debut in the role of Desdemona in Verdi's Otello at the Utah Festival Opera the Salt Lake City Tribune exclaimed "Hanson’s vocal range, exquisite control and emotional depth culminated in "Willow Song"; the sublime "Ave Maria" that followed was a masterpiece of tenderness and vulnerability. She also showed indomitable strength, defying Otello’s brutal efforts to make her confess a nonexistent sin in the final duet." Of her New York City Opera debut as Puccini's Tosca, The New York Times noted, "Ms. Hanson made a strong debut as Tosca, by turns fiery and vulnerable, her voice agreeably dark in its middle range and sufficiently full on top" and the New Yorker exclaims "her dark-grained, strongly felt "Vissi d'arte" sailed right up to the uppermost balcony." Of her Tosca at Utah Festival Opera the Desert News proclaimed her “outstanding” and her “Vissi d’arte” “heart piercing”.  Of her recent Fidelio the weekly InForum noted “Hers is a voice of great power and beauty and she essayed the difficult music with aplomb. Her first act aria was so beautifully done that it received a sustained three-minute ovation at the Friday performance." She received equal praise for portrayals of Maddalena de Coigny in Andrea Chenier for Mobile Opera, as well as the title roles of Ariadne auf Naxos and Norma, both with Union Ave Opera Theatre. For Seattle Opera’s 2009 Ring Cycles, she covered the 3 soprano Valkyries in Die Walkuere.<br><br>On the concert stage, Ms. Hanson performs with noted symphony orchestras across the country including acclaimed performances of Barber’s Hermit Songs, Beethoven's 9th Symphony, Mass in C, Missa Solemnis, Handel’s Messiah and Ode to Queen Anne, Harbison’s Mirabai Songs, Libby Larsen's Try Me, Good King Mozart’s Exultate Jubilate, Orff’s Carmina Burana, Rutter's Feel the Spirit, Strauss’s Vier Letzte Lieder, Verdi’s Requiem, Vivaldi’s Gloria and Motet, and Wagner's Wesendonck Lieder.<br><br>Upcoming she sings Rosalinda in J. Strauss's Die Fledermaus with Nashville Opera, a German Art Song recital series throughout the Mid-West, and will debut a recording Chanson d'amour, a CD of song of love through out the world with her long time collaborator, Ainhoa Urkijo.
+                </p>
+                <p><a id="carlahanson-bio-btn" class="bio-btn">Read More</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/williamthompson.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>William Thompson</h4>
+                <span>Business Strategist</span>
+                <p id="williamthompson-bio" class="text-overflow-clamp">
+                  William Thompson is a visonary business strategist and autodidact with a deep passion for solving complex problems through clear, innovative thinking. With a background in military intelligence, fintech, and entrepreneurship, he blends big-picture vision with grounded, systems-oriented strategy.<br><br>A lifelong self-learner and natural problem-solver, William is known for helping organizations identify unseen opportunities and navigate challenges with precision. He brings sharp insight into market positioning, design thinking, and scalable growth.<br><br>Currently developing an AI/data project, he also has a talent for uncovering insights in publicly available data and building tools that make strategic decision-making more accessible. His analytical approach is matched by a creative streak and a deep respect for well-crafted systems.<br><br>He believes the value of a professional is directly proportionate to the complexity of the problems they can solve—and he is continually seeking ways to offer meaningful, lasting value through his work.
+                </p>
+                <p><a id="williamthompson-bio-btn" class="bio-btn">Read More</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section><!-- End Team Section -->
 
