--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </video>
     <div class="container">
       <h1 class="animate__animated animate__fadeInDown">Transformance Art is <span class="hide-desktop" style="color: #ffc107">...<br></span><span id="rotating-word" aria-live="polite"></span></h1>
-      <p class="animate__animated animate__fadeInUp">Creative expression has been shown to reduce stress, build emotional resilience, and promote healing. But the benefits extend beyond the artist - research confirms that simply experiencing the arts can ease depression and strengthen well-being. At Transformance Art, we empower artists to heal through their work and bring transformative arts experiences to the community.</p>
+      <p class="animate__animated animate__fadeInUp">Creative expression has been shown to reduce stress, build emotional resilience, and promote healing. But the benefits extend beyond the artist - research confirms that simply experiencing the arts can ease symptoms of depression and strengthen well-being. At Transformance Art, we empower artists to heal through their work and bring transformative arts experiences to the community.</p>
       <a href="/connect" class="btn-get-started animate__animated animate__fadeInUp">Get Involved</a>
     </div>
   </section><!-- End Hero -->
@@ -143,25 +143,31 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 bg-darkblue">
+          <div class="col-lg-5 bg-darkblue">
             <img src="assets/img/meraki-projects.png" class="img-fluid" alt="">
           </div>
 
-          <div class="col-lg-6 d-flex flex-column justify-content-center p-5 project-info">
+          <div class="col-lg-7 d-flex flex-column justify-content-center p-5 project-info">
             <p>
               Meraki [may-rah-kee] is a Greek word that means "to do something with soul, creativity, or love; to put something of yourself in your work".
             </p>
             <p>
-              The Meraki Projects will be a series of relevant fine arts experiences that will promote hope, healing, and restoration. Each project will have a specific focus with the goal of bringing the experiences to cities around the world. The first project will focus on suicide awareness.
+              The Meraki Projects will be a series of relevant fine arts experiences that will promote hope, healing, and restoration. Each project will have a specific focus with the goal of bringing the experiences to cities around the world.
+            </p>
+            <p>
+                The first project will focus on suicide survival and healing.
             </p>
             <hr>
             <div class="icon-box">
               <div class="icon"><i class="bx bx-calendar"></i></div>
-              <h3 class="title">Strength and Survival: Creative Expressions of Overcoming Suicide and Loss</h3>
-              <p class="description">More information coming soon. Subscribe to our newsletter and follow our social media to get notified of any updates!</p>
+              <h3 class="title">Beauty from Ashes: A Concert of Survival and Hope</h3>
+              <p class="description"><i>Transforming sorrow, grief, and despair into joy, beauty, and celebration.</i></p>
+              <p class="description"><a href="https://maps.app.goo.gl/Z3rdfVbPXVDZkEwB8" target="_blank"><i class='bx bx-map'></i> The Square Room: 4 Market Square, Knoxville, TN 37902</a></p>
+              <p class="description"><i class='bx bx-calendar'></i> September 20, 2025</p>
+              <p class="description"><i class='bx bx-time-five' ></i> TBA</p>
             </div>
             <div class="text-center">
-              <a href="projects" class="basic-btn">View All Projects</a><a href="suicide-awareness" class="yellow-btn">Project Info</a>
+                <a href="suicide-survival" class="yellow-btn">Project Info</a>
             </div>
           </div>
         </div>
