--- a/events.html
+++ b/events.html
@@ -142,7 +142,7 @@
               <div class="card-body">
                 <h5 class="card-title">Regency Soirée | Nov. 10, 2024</h5>
                 <p class="card-text">A Bridgerton-inspired fundraiser ball that featured live music and dance performances, a dance lesson (provided by <a href="https://marblecityballroom.com/" target="_blank">Marble City Ballroom</a>), signature cocktails, light hors d'oeuvres and a silent auction.</p>
-                <p class="card-text">The proceeds of this event are dedicated to the development of our 2025 project "<a href="/projects" target="_blank">Strength and Survival: Creative Expressions of Suicide and Loss</a>".</p>
+                <p class="card-text">The proceeds of this event are dedicated to the development of our 2025 project "<a href="/suicide-survival" target="_blank">Beauty from Ashes: A Concert of Survival and Hope</a>".</p>
                 <div class="text-center">
                   <a href="https://photos.app.goo.gl/kG9syhJNVdesxs2Y6" target="_blank" class="basic-btn">Photo Gallery</a>
                 </div>
