--- a/suicide-survival.html
+++ b/suicide-survival.html
@@ -30,7 +30,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Transformance Art | Suicide Awareness Meraki Project</title>
+  <title>Transformance Art | Suicide Survival Meraki Project</title>
 	<meta name="description" content="Discover the healing power of music, dance, painting, and poetry. Our curated artistic experience features original works by transformance artists and local community contributors, offering hope and restoration for those navigating life's challenges.">  
 
   <!-- Google Fonts -->
