Beauty from Ashes Updates

--- a/projects.html
+++ b/projects.html
@@ -138,11 +138,17 @@
               <p class="description"><i>Transforming sorrow, grief, and despair into joy, beauty, and celebration.</i></p>
               <p class="description"><a href="https://maps.app.goo.gl/Z3rdfVbPXVDZkEwB8" target="_blank"><i class='bx bx-map'></i> The Square Room: 4 Market Square, Knoxville, TN 37902</a></p>
               <p class="description"><i class='bx bx-calendar'></i> September 20, 2025</p>
-              <p class="description"><i class='bx bx-time-five' ></i> TBA</p>
+              <p class="description"><i class='bx bx-time-five' ></i> 7:00 PM</p>
+              <p class="description"><i class="bi bi-ticket"></i> $35 General | $50 VIP</p>
             </div>
             <div class="text-center">
-              <a href="suicide-survival" class="yellow-btn">Project Info</a>
+                <a href="beauty-from-ashes" class="basic-btn">Project Info</a><a href="https://givebutter.com/beauty-from-ashes-2025-09-20" class="yellow-btn">Buy Tickets</a>
             </div>
+            <hr>
+            <h3 class="special-title">Art Submissions Needed!</h3>
+            <p class="description">We are inviting the suicide survivors of our local community to share their stories, art, and poetry to be presented as part of the art walk experience.</p>
+            <a style="font-size: 14px; text-decoration: underline;" href="beauty-from-ashes#art-submission"><i class="bi bi-info-circle"></i> How to Submit Your Art</a>
+          </div>
           </div>
         </div>
 
