--- a/events.html
+++ b/events.html
@@ -129,6 +129,32 @@
   <main id="main">
     <!-- ======= Service Details Section ======= -->
     <section class="service-details">
+    <div class="section-title text-white">
+        <h2>Upcoming Event</h2>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 offset-md-3 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/img/beauty-from-ashes.png" alt="Regency Soirée Event">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Beauty from Ashes | Sept. 20, 2025</h5>
+                <p class="card-text">Music, dance, painting, and poetry are powerful mediums for expressing one's deepest emotions. Whether navigating the journey through depression and overcoming suicidal thoughts, surviving the loss of a loved one, or any stage in between, art serves as a vital tool for communication. It helps people find hope, healing, and restoration.</p>
+                <p class="card-text">Join us for an artistic evening where stories of suicide survival are told through music, dance, and art.</p>
+                <p class="description"><a href="https://maps.app.goo.gl/Z3rdfVbPXVDZkEwB8" target="_blank"><i class='bx bx-map'></i> The Square Room: 4 Market Square, Knoxville, TN 37902</a></p>
+                <p class="description"><i class='bx bx-calendar'></i> September 20, 2025</p>
+                <p class="description"><i class='bx bx-time-five' ></i> 7:00 PM</p>
+                <p class="description"><i class="bi bi-ticket"></i> $35 General | $50 VIP</p>
+                <div class="text-center">
+                    <a href="beauty-from-ashes" class="basic-btn">Project Info</a><a href="https://givebutter.com/beauty-from-ashes-2025-09-20" class="yellow-btn">Buy Tickets</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="section-title text-white">
         <h2>Past Events</h2>
       </div>
@@ -142,7 +168,7 @@
               <div class="card-body">
                 <h5 class="card-title">Regency Soirée | Nov. 10, 2024</h5>
                 <p class="card-text">A Bridgerton-inspired fundraiser ball that featured live music and dance performances, a dance lesson (provided by <a href="https://marblecityballroom.com/" target="_blank">Marble City Ballroom</a>), signature cocktails, light hors d'oeuvres and a silent auction.</p>
-                <p class="card-text">The proceeds of this event are dedicated to the development of our 2025 project "<a href="/suicide-survival" target="_blank">Beauty from Ashes: A Concert of Survival and Hope</a>".</p>
+                <p class="card-text">The proceeds of this event are dedicated to the development of our 2025 project "<a href="/beauty-from-ashes" target="_blank">Beauty from Ashes: A Concert of Survival and Hope</a>".</p>
                 <div class="text-center">
                   <a href="https://photos.app.goo.gl/kG9syhJNVdesxs2Y6" target="_blank" class="basic-btn">Photo Gallery</a>
                 </div>
