--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
       </div>
       <div class="container pb-5" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-white">Mission</h3>
-        <p class="lead text-white">Fascilitating personal and societal wellness through relevant fine arts experiences.</p>
+        <p class="lead text-white">Facilitating personal and societal wellness through relevant fine arts experiences.</p>
       </div>
       <div class="container pb-5" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-white">Vision</h3>
