--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -239,6 +239,20 @@
                 </p>
             </div>
         </div>
+            <div class="col-md-12" style="padding-bottom: 2em;">
+                <h3>Emcee</h3>
+                <p>
+                    Abigail Tardy is so grateful to be emceeing this beautiful event for the evening. She is a junior at University of Tennessee majoring in Journalism & Media, but performance art is where her heart lies. Her own connection to the arts aided her own struggles with a deep depression. She is a singer, actress, dancer, and photographer. She has performed recently as Chava in Fiddler on the Roof (Wordplayers), Claudette/Diane/Charlotte in Walk, Don't Ride! (Wordplayers), Soeur St. Charles in Les Dialogues des Carmelites (UTOT), and the Narrator in The Journey: A Pilgrim's Progress (Gregory Tardy Tentet). She hopes everyone will be touched by the performances and art seen this evening.
+                </p>
+                <br>
+                <div class="row">
+                    <div class="col-md-3" style="text-align: center;">
+                        <img src="assets/img/abigail-tardy.jpg" style="border-radius: 50%; width: 150px;">
+                        <h5 style="padding-top: 10px;">Abigail Tardy</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
         <hr style="border: solid 1px #e6c16f; opacity: 1;">
         <div class="section-title" style="padding-top: 2em;">
             <h2>About the Project</h2>
