--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -247,7 +247,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-3" style="text-align: center;">
-                        <img src="assets/img/abigail-tardy.jpg" style="border-radius: 50%; width: 150px;">
+                        <img src="assets/img/abigail-tardy.JPG" style="border-radius: 50%; width: 150px;">
                         <h5 style="padding-top: 10px;">Abigail Tardy</h5>
                     </div>
                 </div>
