--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -187,6 +187,14 @@
             <div class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Dance Performances</h3>
                 <p>Beautiful contemporary dances choreographed by McKenzie Duncan.</p>
+                <br>
+                <div class="row">
+                    <div class="col-md-3" style="text-align: center;">
+                        <img src="assets/img/mckenzie-duncan.jpg" style="border-radius: 50%; width: 150px;">
+                        <h5 style="padding-top: 10px;">McKenzie Duncan</h5>
+                        <span>Dancer / Choreographer</span>
+                    </div>
+                </div>
             </div>
             <div id="art-submission" class="col-md-12" style="padding-bottom: 3em;">
                 <h3>Art Walk</h3>
