--- a/beauty-from-ashes.html
+++ b/beauty-from-ashes.html
@@ -208,6 +208,9 @@
                     Artists have the option to list a sale price on their displayed artwork. We will not charge any fees, but welcome donations so we can bring this project to other cities.
                 </p>
                 <p>
+                    Contributing artists will not need to purchase a ticket to the event.
+                </p>
+                <p>
                     Submissions are accepted until September 6, 2025.
                 </p>
                 <p>
@@ -219,6 +222,11 @@
                     </li>
                     <li>
                         An attached photo of your art, or copy of your poetry.
+                        <ul>
+                            <li>
+                                If an artwork, please provide the dimensions.
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         Your story that you'd like to share.
@@ -293,6 +301,11 @@
                 <img src="assets/img/thesecretstudio-logo.jpg" style="border-radius: 50%; width: 150px;">
                 <h5 style="padding-top: 10px;">The Secret Studio</h5>
                 <span>Videography / Media Production</span>
+            </div>
+            <div class="col-md-3" style="text-align: center;">
+                <img src="assets/img/matts-piano-and-organ.png" style="border-radius: 50%; width: 150px;">
+                <h5 style="padding-top: 10px;">Matt's Piano and Organ</h5>
+                <span>Piano Rental & Delivery</span>
             </div>
         </div>
 </div>
